--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
     -->
         <title>HowTo</title>
     </head>
-    <body>
+    <body style="background-color: #f8f8f8">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
         <!--
