--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,7 @@
         <noscript id="jss-insertion-point"></noscript>
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="%PUBLIC_URL%/howto_favicon.ico" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
